--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,7 +6,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    environment: dev
+    environment: staging
     
     steps:
     - uses: actions/checkout@v4
