--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.codacy.app</groupId>
-    <artifactId>coverage-dev</artifactId>
+    <artifactId>coverage-staging</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>coverage-dev</name>
+    <name>coverage-staging</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
